--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ATLAS_URL=mongodb+srv://shahpar:majorproject@cluster0.wqreo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://shahpar:majorproject@cluster0.wqreo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
