--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
     "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
